# ali-bot

./: .gitignore  .shellcheckrc  .travis.yml  CODEOWNERS  Jenkinsfile  README.rst  aliCvmfsPublish  aliCvmfsPublish.conf  aliPublish  aliPublish.conf  alibuild-ib.sh  alidist-override-tags  auto-update-git-branches  awake-on-http  backup-marathon  build-any-ib.sh  build-ib.sh  build-package  build-rpm-sync.sh  bulk-change-pr-status  check-daily-slack  check-daily-slack.py  check-open-pr.py  ci-status-overview  clean-repo-ci  config.yaml  daily-aliphysics.sh  daily-tags.sh  daq-da-rpms.sh  docker-compose.yml  list-branch-pr  make-shuttle.sh  mesos-dns-lookup  monitor-github-api  monitor-github-api-monalisa.sh  nomad-diskfree  nomad_matrix.py  process-pull-request  push-dash.py  pyproject.toml  (+16 more)
.github/workflows/: async-auto-label.yml  async-create-label.yml  async-list-label.yml  async-update.yml  build-any-ib.yml  c++-code-formatting.yml  cacheo2package.yml  check-ccdbcache.yml  check-ci.yml  check-cvmfs.yml  check-publisher.yml  check-untested-packages.yml  check-workflows.yml  clean-pr-checks.yml  o2-full-deps.yml  pr-check.yml  pr-security-approval.yml  smoke-test.yml
alibot_helpers/: github_utilities.py  utilities.py
analytics/: report-analytics  report-metric-monalisa
ci/: .gitignore  README.md  build-helpers.sh  build-loop.sh  check-open-pr  check-open-pr.py  cleanup.py  continuous-builder.sh  convert-from-gitolite.py  gen-pull-requests.sh  metagit.py  missing-persons.py  prinfo  process-pull-request-http.py  run-continuous-builder.sh  run-http.sh  runner.sh  sync-egroups.py  sync-mapusers.py  tested_pkgs.py
ci/conf/: aliceo2_o2_o2_macos.sh  alidist_o2-0.sh  alidist_o2-1.sh  alidist_o2.sh  alidist_o2suite_o2_macos.sh  aliroot-el6.sh  aliroot-guntest.sh  aliroot.sh  aliroot_aliroot-guntest_next-root6_macos.sh  common.sh  common_o2_o2_macos.sh  o2-0.sh  o2-1.sh  o2.sh  qualitycontrol_qualitycontrol_o2-dataflow_macos.sh
ci/github_json/: status.json
ci/launchd/: ch.cern.alice.continous-builder.o2-0.plist
ci/newsyslog.d/: ch.cern.alice.continous-builder.o2-0.conf
ci/repo-config/: DEFAULTS.env  defaults.env
ci/repo-config/macos/: DEFAULTS.env
ci/repo-config/macos/aido2osx3/: alidist-o2.env  aliroot.env  common-o2.env  qualitycontrol-o2.env
ci/repo-config/macos/aido2osx7/: common-o2.env
ci/repo-config/macos/aido2osx8/: qualitycontrol-o2.env
ci/repo-config/macos/alibuildmac00/: aliroot.env  common-o2.env  o2physics.env  qualitycontrol-o2.env
ci/repo-config/macos/alibuildmac01/: aliroot.env  o2.env  o2physics.env  qualitycontrol-o2.env
ci/repo-config/macos/alibuildmac02/: alidist-o2.env
ci/repo-config/macos/alibuildmac03/: alidist-o2.env  o2physics.env  qualitycontrol-o2.env
ci/repo-config/macos/alibuildmac04/: DEFAULTS.env  alidist-o2.env  o2.env
ci/repo-config/mesosci/: DEFAULTS.env
ci/repo-config/mesosdaq/: DEFAULTS.env
ci/repo-config/slc7/: aliphysics-release.env  aliroot-alidist.env  aliroot-el6native.env  aliroot-release.env  alo.env  dds-main.env  dds.env  o2-alidist.env  o2-dev-fairroot.env  o2.env  o2checkcode.env  o2codechecker.env  qualitycontrol-dataflow.env  qualitycontrol.env  readoutcard-dataflow.env  rivet.env  run2esdconv.env  zlib.env
cleanup/: README.md  cleanup-rules.yaml  repo-s3-cleanup
cvmfs/: README.md  alienv  generate_cvmfsdirtab.sh  init-cvmfs-test.sh  link_latest_gcc.sh  test-alienv.sh
cvmfs-mon/: cvmfs-mon.py  cvmfs-mon.yml
dummy-secrets/: cert.pem  key.pem
es/: build_errors.json  build_results.json  build_status.json  build_summary.json  build_tests_status.json  build_tools_info.json  build_warnings.json
es-mappings/: logs.json  riemann-metrics.json
jenkins/: README.md  backup-marathon  build-coverage  daily-aliphysics  daily-tags  daq-da-packager  deploy-cluster-updates  deploy-hlt-updates  deploy-mirror-updates  generate-web-pages  git-bfg-and-mirror  migrate-repos  ocdb-list  ocdb-snapshot  release-alibuild  validation-pipeline  validation-pwg-emcal
logstash/: 00-input-all-webhook.conf  00-input-marathon.conf  00-input-mesos.conf  00-input-redis.conf  50-filter-all-jenkins.conf  50-filter-all-logstash.conf  50-filter-all-metrics.conf  99-output-elasticsearch.conf  99-output-monalisa.conf  99-output-riemann.conf  logstash.conf  to_monalisa.conf
metagit/: __init__.py
publish/: .gitignore  README.md  aliPublish  aliPublish-async.conf  aliPublish-example.conf  aliPublish-mesos.conf  aliPublish-nightlies.conf  aliPublish-noarch.conf  aliPublish-rpms-cc8.conf  aliPublish-rpms-cc8test.conf  aliPublish-rpms-cc9.conf  aliPublish-rpms.conf  aliPublish-s3-updatable-rpms.conf  aliPublish-s3.conf  aliPublish-test.conf  aliPublish-titan.conf  aliPublish-updatable-rpms.conf  aliPublish-updatable-test-rpms.conf  aliPublish.conf  aliPublishS3  aliUnpublish  cache-ccdb-objects.txt  cache-ccdb.py  check-for-published-rpm.sh  cleanup-alien.sh  cleanup-alien.sh.jinja  cleanup-cvmfs.sh  cleanup-cvmfs.sh.jinja  get-and-run.sh  pub-alien-template.sh  pub-cvmfs-template.sh  pub-file-template.sh  pub-rpms-template.sh  pub-updatable-rpms-template.sh  publish-all.sh  publish-cert.sh  publish-data.sh  remove-orphan-rpms.py  run-all-rpms.sh  test-nightlies.yaml  (+7 more)
publish/test/: test-repo.sh
repo-cleanup/: .gitignore  README.md  gen-repo-report.sh  repo-cleanup.py  repo-cleanup.yml
riemann/: config.rb  project.clj  riemann.config  ws_config.json
rpms/: o2-prereq-alma9.spec  o2-prereq-cc8.spec  o2-prereq-el10.spec  o2-prereq-el7.spec  o2-prereq-el8.spec  o2-prereq-el9.spec  o2-prereq-fedora.spec  o2-prereq.spec
script/: get_builds.py  get_builds.sh  set_mappings.sh
test/: test_githubCachedRequest.py  test_githubUtilities.py  test_schedule.py
utils/: README.md  bulk-change-pr-status  bulk-change-pr-status-by-checker  ci-status-history  cibuildhistory  ciqueues  clean_pr  clean_sw_from_allocs  duplicate-hash-tarballs  fix-s3-symlinks  logspecs  logtimes  nomad-diskfree  pdci  quarantine-s3-package  worker_status
utils/aurora/: cihosts  fetch-ci-logs  mpdock
utils/old/: ciqueues  duplicate-hash-tarballs  pdci
(+96 files in other folders)
