[build-system]
requires = ["setuptools>=61", "setuptools_scm[toml]>=8.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = 'ali-bot'
readme = "README.rst"
dynamic = ['version']

description = 'ALICE Multipurpose bot'
authors = [
  {name = 'Giulio Eulisse', email = 'giulio.eulisse@cern.ch'},
]
license = {text = 'GPL'}
classifiers = [
   'Development Status :: 4 - Beta',
   'Intended Audience :: Developers',
   'Topic :: Software Development :: Build Tools',
   'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',

   'Programming Language :: Python :: 3.6',
   'Programming Language :: Python :: 3.8',
   'Programming Language :: Python :: 3.9',
   'Programming Language :: Python :: 3.10',
   'Programming Language :: Python :: 3.11',
   'Programming Language :: Python :: 3.12',
   'Programming Language :: Python :: 3.13',
]

keywords=[
  'HEP',
  'ALICE'
]

dependencies = [
  'PyGithub==1.46',
  'argparse',
  'requests',
  'pytz',
  's3cmd',
  'pyyaml',
  'boto3<1.36.0'
]

[project.optional-dependencies]
services = [
  "Twisted",
  "klein",
  "python-ldap"
]
ci = [
  "gql<4.0.0",
  "requests-toolbelt",  # for gql
  "typing-extensions==4.1.1; python_version == '3.6'",
]

utils = [
  "python-nomad"
]

[project.urls]
homepage = 'https://alisw.github.io/ali-bot'

[tool.setuptools]
script-files = [
  # Continuous Integration
  "set-github-status",
  "report-pr-errors",
  "list-branch-pr",
  "alidist-override-tags",
  # Analytics
  "analytics/report-analytics",
  "analytics/report-metric-monalisa",
  # Continuous Builders
  "ci/continuous-builder.sh",
  "ci/build-helpers.sh",
  "ci/build-loop.sh",
  "ci/cleanup.py",
  # S3 housekeeping
  "repo-s3-cleanup",
  "daily-tags.sh",
  "build-any-ib.sh",
  "build-package",
  # Wait for open Pull Requests before daily tags
  "ci/check-open-pr",
  # Process PR permissions
  "ci/process-pull-request-http.py",
  "ci/sync-egroups.py",
  "ci/sync-mapusers.py",
  # S3 repo maintenance
  "update-symlink-manifests",
  # Helpers
  "ci-status-overview",
  "utils/bulk-change-pr-status",
  "utils/bulk-change-pr-status-by-checker",
  "utils/ciqueues",
  "utils/ci-status-history",
  "utils/duplicate-hash-tarballs",
  "utils/logspecs",
  "utils/logtimes",
  "utils/nomad-diskfree",
  "utils/pdci",
]

[tool.setuptools.packages.find]
include = ["*"]

[tool.setuptools_scm]
# Configuration for setuptools_scm
write_to = "ali_bot_version.py"
